--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -88,6 +88,13 @@
       <version>8.0.21</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.8.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
