--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -88,11 +88,18 @@
       <version>8.0.21</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-dbcp2</artifactId>
       <version>2.8.0</version>
+    </dependency> -->
+
+    <!-- Database connection pooling framework -->
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>3.4.5</version>
     </dependency>
 
   </dependencies>
