--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -122,7 +122,7 @@
     </dependency>
     <dependency>
         <groupId>io.jsonwebtoken</groupId>
-        <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+        <artifactId>jjwt-gson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
         <version>0.11.2</version>
         <scope>runtime</scope>
     </dependency>
