--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -138,6 +138,7 @@
         <artifactId>jjwt-gson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
         <version>0.11.2</version>
         <scope>runtime</scope>
+    </dependency>
     <!-- Miscellaneous dependencies not included in JDK11 -->
     <dependency>
       <groupId>org.javassist</groupId>
