--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -145,7 +145,12 @@
       <artifactId>javassist</artifactId>
       <version>3.20.0-GA</version>
     </dependency>
-
+    <!--  send email -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.5.0-b01</version>
+    </dependency>
     <!-- email regex validation https://mvnrepository.com/artifact/commons-validator/commons-validator -->
     <dependency>
       <groupId>commons-validator</groupId>
@@ -153,6 +158,7 @@
       <version>1.5.0</version>
     </dependency>
   </dependencies>
+
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
