--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,6 +81,18 @@
       <version>9.4.0.v20161208</version>
     </dependency>        
     
+    <!-- Jetty websocket -->
+    <dependency>
+      <groupId>org.eclipse.jetty.websocket</groupId>
+      <artifactId>websocket-api</artifactId>
+      <version>9.4.0.v20161208</version>
+    </dependency>
+    <dependency>
+        <groupId>org.eclipse.jetty.websocket</groupId>
+        <artifactId>websocket-server</artifactId>
+        <version>9.4.0.v20161208</version>
+    </dependency>
+
     <!-- For JSON handling -->
     <dependency>
       <groupId>org.glassfish.jersey.media</groupId>
