--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -87,6 +87,7 @@
       <artifactId>websocket-api</artifactId>
       <version>9.4.0.v20161208</version>
     </dependency>
+
     <dependency>
         <groupId>org.eclipse.jetty.websocket</groupId>
         <artifactId>websocket-server</artifactId>
@@ -100,6 +101,13 @@
       <version>2.32</version>
     </dependency>
 
+    <!-- <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+      <scope>runtime</scope>
+      <version>2.32</version>
+    </dependency> -->
+
     <dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-databind</artifactId>
@@ -111,6 +119,7 @@
       <artifactId>jackson-jaxrs-json-provider</artifactId>
       <version>2.11.3</version>
     </dependency>
+    
 
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
