--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "example-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -10,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "http-proxy-middleware": "^1.0.6",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-async": "^10.0.1",
